--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,3 +1,20 @@
 @each $key, $val in $colors {
-    
+    .button-#{$key}{
+        border: 5px solid $val;
+        background-color: transparent;
+        color: $val;
+        border-radius: 5px;
+        text-transform: uppercase;
+        cursor: pointer;
+        padding: 0.5%;
+        transition: 0.1s;
+        &:hover {
+            transform: scale(1.1);
+            color: white;
+            background-color: $val;
+        }
+        &:active {
+            transform: scale(1.05);
+        }
+    }
 };
