Add axios and search func

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -10,7 +10,7 @@
     font-family: $font-family;
     display: flex;
     flex-flow: column wrap;
+    gap: 10px;
     align-items: center;
-    padding: 10% 0;
     text-align: center;
 }
