--- a/sass/_utilities.scss
+++ b/sass/_utilities.scss
@@ -71,6 +71,14 @@ $utilities: (
             "x-b": 800,
             "xx-b": 900
         )
+    ),
+    "text-align": (
+        "prefix": "ta",
+        "values": (
+            "l": left,
+            "c": center,
+            "r": right
+        )
     )
 );
 
